Anadido en el index la url de la pagina web para ver proyecto online

--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
+<!-- 
 
-<!-- Pagina web Portfolio: Gonzalo Arechavala -->
+  Pagina web Portfolio: Gonzalo Arechavala
+
+  Puedes ver el proyecto online en: 
+  https://www.arechavala.es/upgrade-hup/portfolio/
+
+-->
+
 <!-- Esta pagina utiliza solo HTML y CSS, tanto propio como de Bootstrap -->
 
 <html>
